# rust-axum-template

./: .env  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: lib.rs  post.rs  prelude.rs  role.rs  user.rs  user_role_relation.rs
migration/: Cargo.toml
migration/src/: create_table_down.sql  create_table_up.sql  m20220101_000001_create_table.rs  up.sql
src/: app.rs  error.rs  lib.rs  main.rs
src/common/: constants.rs  context.rs  mod.rs
src/dto/: mod.rs
src/extractors/: header.rs  mod.rs  validation.rs
src/handlers/: demo.rs
src/i18n/: en.json  zh.json
src/middlewares/: error_translator.rs  mod.rs
tests/: demo.rs  demo_i18n.test.rs
