[package]
name = "__template__"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = "0.7.4"
axum-extra = "0.9.3"
bytes = "1.6.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
http-body-util = "0.1.1"
intl-rs = "2.0.0"
into_response_derive = "0.2.0"
jsonwebtoken = "9.3.0"
mime = "0.3.17"
redis = {version="0.25.2",features=["tokio-comp"]}
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print" ] }
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = [
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { version = "0.5.2", features = [
  "trace",
  "compression-full",
  "request-id",
  "cors",
  "util",
] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
uuid = "1.8.0"
validator = "0.17.0"
